--- a/web-dashboard-project/dashboard2.html
+++ b/web-dashboard-project/dashboard2.html
@@ -2,26 +2,67 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dashboard 2 - Weather</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <script src="js/dashboard2.js" defer></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Weather Dashboard</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <style>
+    body {
+      background-color: #f5f7fa;
+      font-family: 'Segoe UI', sans-serif;
+    }
+    .dashboard {
+      max-width: 1000px;
+      margin: auto;
+      padding: 20px;
+    }
+    .overview-box, .forecast-box {
+      background: white;
+      border-radius: 12px;
+      padding: 20px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+      margin-bottom: 20px;
+    }
+    .forecast-item {
+      border-right: 1px solid #eee;
+    }
+    .forecast-item:last-child {
+      border: none;
+    }
+    .btn-back {
+      position: fixed;
+      top: 20px;
+      left: 20px;
+    }
+  </style>
 </head>
-<body class="bg-light text-dark">
+<body>
+  <a href="index.html" class="btn btn-dark btn-back">Back to Home</a>
 
-  <div class="container py-5">
-    <h1 class="text-center mb-4">Weather Forecast Dashboard</h1>
-    <div class="mb-3 text-center">
-      <input type="text" id="cityInput" placeholder="Enter city name..." class="form-control w-50 d-inline-block" />
-      <button onclick="loadWeather()" class="btn btn-primary ms-2">Get Weather</button>
+  <div class="dashboard">
+    <div class="mb-4 d-flex justify-content-between align-items-center">
+      <h2>Weather Overview</h2>
+      <div class="input-group w-50">
+        <input id="cityInput" class="form-control" placeholder="Enter city (e.g. Istanbul)" />
+        <button class="btn btn-primary" id="searchBtn">Search</button>
+      </div>
     </div>
-    <div class="row">
-      <div class="col-md-12">
-        <canvas id="weatherChart" height="100"></canvas>
+
+    <div class="overview-box" id="todayOverview">
+      <h4>Today Overview</h4>
+      <div id="todayData" class="row g-3 mt-3">
+        <!-- Populated by JavaScript -->
+      </div>
+    </div>
+
+    <div class="forecast-box" id="forecastBox">
+      <h4>Next 5 Days</h4>
+      <div id="forecastData" class="row row-cols-2 row-cols-md-5 g-2 mt-2">
+        <!-- Populated by JavaScript -->
       </div>
     </div>
   </div>
 
+  <!-- Always place scripts at the bottom for faster loading -->
+  <script src="dashboard2.js"></script>
 </body>
 </html>
